# Atum

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md
Atum/: main.cpp
Atum/Editor/: Editor.cpp  Editor.h  EditorDrawer.cpp  EditorDrawer.h  Gizmo.cpp  Gizmo.h  LayerEntryWidget.cpp  LayerEntryWidget.h  Project.cpp  Project.h  SceneObjCmpWidget.cpp  SceneObjCmpWidget.h  freecamera.cpp  freecamera.h  project.cpp  project.h
Atum/Platform/Android/: AtumLib.cpp  android_fopen.cpp  android_fopen.h  gles3jni.cpp
Atum/Platform/Common/: AtumRunner.cpp  AtumRunner.h
Atum/Platform/Win/: main.cpp
Atum/Platform/iOS/: AppDelegate.mm  AtumViewController.h  AtumViewController.m  AtumViewController.mm  Info.plist
Atum/SceneAssets/: Animation.cpp  Animation.h  Phys2DComp.cpp  Phys2DComp.h  ScriptMetaDataAsset.cpp  ScriptMetaDataAsset.h  ScriptMetaDataComp.cpp  ScriptMetaDataComp.h  Sprite.cpp  Sprite.h  SpriteAsset.cpp  SpriteAsset.h  SpriteGraphAsset.cpp  SpriteGraphAsset.h  SpriteGraphInst.cpp  SpriteGraphInst.h  SpriteGraphWindow.cpp  SpriteGraphWindow.h  SpriteInst.cpp  SpriteInst.h  SpriteTileAsset.cpp  SpriteTileAsset.h  SpriteTileInst.cpp  SpriteTileInst.h  SpriteWindow.cpp  SpriteWindow.h  SpritesLayerAsset.cpp  SpritesLayerAsset.h  SpritesLayerInst.cpp  SpritesLayerInst.h
Atum/SceneAssets/Animator/: Animator.cpp  Animator.h  AnimatorObject.cpp  AnimatorObject.h  AnimatorWindow.cpp  AnimatorWindow.h
Atum/SceneAssets/UI/: UIButtonAsset.cpp  UIButtonAsset.h  UIContainerAsset.cpp  UIImageAsset.cpp  UIImageAsset.h  UILabelAsset.cpp  UILabelAsset.h  UIViewAsset.cpp  UIViewAsset.h  UIViewInstanceAsset.cpp  UIViewInstanceAsset.h  UIWidgetAsset.cpp  UIWidgetAsset.h
Atum/SceneObjects/: CharacterCamera2D.cpp  CharacterCamera2D.h  PhysBox.cpp  PhysBox.h  RenderLevels.h  SceneScript.cpp  SceneScript.h  Script.cpp  Script.h  SimpleCharacter2D.cpp  SimpleCharacter2D.h  SimpleClient.cpp  SimpleClient.h  SimpleServer.cpp  SimpleServer.h  SpriteObject.cpp  SpriteObject.h  TDPrt.cpp  TDPrt.h  Track2DComp.cpp  Track2DComp.h  Triger2D.cpp  Triger2D.h  VirtualJoystick.cpp  VirtualJoystick.h  correction.cpp  correction.h  freecamera.cpp  freecamera.h  hovertank.cpp  hovertank.h  model.cpp  model.h  plane.cpp  plane.h  programs.cpp  programs.h  quad.cpp  quad.h  scene.cpp  (+9 more)
Atum/SceneObjects/2D/: Camera2D.cpp  Camera2D.h  NavMesh2D.cpp  NavMesh2D.h  Phys2DComp.cpp  Phys2DComp.h  ShadowCaster2D.cpp  ShadowCaster2D.h  Sprite.cpp  Sprite.h  SpriteAsset.cpp  SpriteAsset.h  SpriteGraphAsset.cpp  SpriteGraphAsset.h  SpriteGraphInst.cpp  SpriteGraphInst.h  SpriteInst.cpp  SpriteInst.h  SpriteTileAsset.cpp  SpriteTileAsset.h  SpriteTileInst.cpp  SpriteTileInst.h  SpriteWindow.cpp  SpriteWindow.h  SpritesLayerAsset.cpp  SpritesLayerAsset.h  SpritesLayerInst.cpp  SpritesLayerInst.h  Track2DComp.cpp  Track2DComp.h  Triger2D.cpp  Triger2D.h  Trigger2D.cpp  Trigger2D.h
Atum/SceneObjects/3D/: Camera3D.cpp  Camera3D.h  GenericMarker.cpp  GenericMarker.h  MeshAsset.cpp  MeshAsset.h  MeshInstance.cpp  MeshInstance.h  Phys3DComp.cpp  Phys3DComp.h  PhysBox.cpp  PhysBox.h  Terrain.cpp  Terrain.h  Track3DComp.cpp  Track3DComp.h  terrain.cpp  terrain.h
Atum/SceneObjects/Common/: BlueprintAsset.cpp  BlueprintAsset.h  BlueprintInst.cpp  BlueprintInst.h  ControlsAliases.cpp  ControlsAliases.h  MusicPlayer.cpp  MusicPlayer.h  SceneScript.cpp  SceneScript.h  SceneScriptAsset.cpp  SceneScriptAsset.h  SceneScriptInst.cpp  SceneScriptInst.h  ScriptMetaDataAsset.cpp  ScriptMetaDataAsset.h  ScriptMetaDataComp.cpp  ScriptMetaDataComp.h  VirtualJoystick.cpp  VirtualJoystick.h
Atum/SceneObjects/GUI/: GUIWidget.cpp  GUIWidget.h  TestGUI.cpp  TestGUI.h
Atum/SceneObjects/PathFinder/: AStar.cpp  AStar.h  PathFinder.cpp  PathFinder.h  Vec2.h
Atum/SceneObjects/UI/: UIButtonAsset.cpp  UIButtonAsset.h  UIContainerAsset.cpp  UIContainerAsset.h  UIImageAsset.cpp  UIImageAsset.h  UILabelAsset.cpp  UILabelAsset.h  UIScriptDrawer.cpp  UIScriptDrawer.h  UIViewAsset.cpp  UIViewAsset.h  (+4 more)
Atum/Support/: Buffer.h  ClassFactory.h  Color.h  Defines.h  Delegate.h  ExceptionReport.cpp  ExceptionReport.h  Math.cpp  Math.h  MathUtils.cpp  MathUtils.h  Matrix.h  Quaternion.h  StringUtils.cpp  StringUtils.h  Support.h  ThreadExecutor.cpp  ThreadExecutor.h  Timer.cpp  Timer.h  Types.h  Vector.h  Vector2.h  Vector4.h  std.h
Doxygen/: Doxyfile  gen_doc.bat
Doxygen/pages/: doc_editor_aim_graph_2D.h  doc_editor_basic_work.h  doc_editor_compiling_ios_android.h  doc_editor_overview.h  doc_editor_run_test.h  doc_editor_sample_projects.h  doc_editor_scripting.h  doc_editor_sprite_editor.h  doc_editor_writing_scene_objects.h  doc_main.h  doc_overview.h  doc_overview_features.h  doc_overview_why.h  doc_project_adding_scene.h  doc_project_folders.h  doc_project_scene_includes.h  doc_scene_adding_scene.h  doc_scene_asset_treeview.h  doc_scene_creating_instanses.h  doc_scene_folders.h  doc_scene_incuded_scenes.h  doc_scene_overview.h  doc_scene_treeview.h  layout.xml
Project/: IonStorm.sln  RenderSystem.VC.VC.opendb
Project/IonStorm/: IonStorm.vcxproj  IonStorm.vcxproj.filters
Project/PC/: Atum.sln  IonStorm.sln
Project/android/: local.properties
Project/android/app/src/main/PhysX/: CMakeLists.txt
Project/android/app/src/main/PhysX/characterkinematic/: CMakeLists.txt
Project/android/app/src/main/PhysX/fastxml/: CMakeLists.txt
Project/android/app/src/main/PhysX/foundation/: CMakeLists.txt
Project/android/app/src/main/PhysX/lowlevel/: CMakeLists.txt
Project/android/app/src/main/PhysX/lowlevelaabb/: CMakeLists.txt
Project/android/app/src/main/PhysX/lowleveldynamics/: CMakeLists.txt
Project/android/app/src/main/PhysX/physx/: CMakeLists.txt
Project/android/app/src/main/PhysX/physxcommon/: CMakeLists.txt
Project/android/app/src/main/PhysX/physxextensions/: CMakeLists.txt
Project/android/app/src/main/PhysX/scenequery/: CMakeLists.txt
Project/android/app/src/main/PhysX/simulationcontroller/: CMakeLists.txt
Project/android/app/src/main/PhysX/task/: CMakeLists.txt
Project/android/app/src/main/cpp/: CMakeLists.txt
(+471 files in other folders)
